[package]
name = "pi_db"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]

[dependencies]
lazy_static = "1.3"
fnv = "1.0.3"
parking_lot = {version = "0.6.4", features = ["nightly"]}
crc = "*"
crossbeam-channel = "0.3.4"
atom = {path = "../pi_lib/atom"}
guid = {path = "../pi_lib/guid"}
bon = {path = "../pi_lib/bon"}
sinfo = {path = "../pi_lib/sinfo"}
ordmap = {path = "../pi_lib/ordmap"}
file = {path = "../pi_lib/file"}
worker = {path = "../pi_lib/worker"}
time = {path = "../pi_lib/time"}
apm = {path = "../pi_lib/apm"}