[package]
name = "pi_db"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
lazy_static = "1.3"
fnv = "1.0.3"
parking_lot = {version = "0.10.0", features = ["nightly"]}
crc = "*"
atom = {path = "../pi_lib/atom"}
guid = {path = "../pi_lib/guid"}
bon = {path = "../pi_lib/bon"}
sinfo = {path = "../pi_lib/sinfo"}
ordmap = {path = "../pi_lib/ordmap"}
file = {path = "../pi_lib/file"}
worker = {path = "../pi_lib/worker"}
time = {path = "../pi_lib/time"}
apm = {path = "../pi_lib/apm"}
handler = { path = "../pi_lib/handler" }
async = { path = "../pi_lib/async"}
futures = "0.3.4"
pi_store = { path = "../pi_store"}
hash = { path = "../pi_lib/hash" }
num_cpus = "1.13.0"
chrono = "0.4"
async_file = { path = "../pi_lib/async_file" }

[dev-dependencies]
crossbeam-channel = "0.5"
env_logger = "0.8"
