[package]
name = "pi_db"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
lazy_static = "1.3"
fnv = "1.0.3"
parking_lot = {version = "0.10.0", features = ["nightly"]}
atom = {path = "../pi_lib/atom"}
guid = {path = "../pi_lib/guid"}
bon = {path = "../pi_lib/bon"}
sinfo = {path = "../pi_lib/sinfo"}
ordmap = {path = "../pi_lib/ordmap"}
apm = {path = "../pi_lib/apm"}
async = { path = "../pi_lib/async"}
pi_store = { path = "../pi_store"}
hash = { path = "../pi_lib/hash" }
chrono = "0.4"
async_file = { path = "../pi_lib/async_file" }

[dev-dependencies]
crossbeam-channel = "0.5"
env_logger = "0.8"
